include/El/lapack_like/solve.py


# Equality-constrained least squares
# ==================================
lib.ElLSE_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElLSE_s.restype = c_uint
lib.ElLSE_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElLSE_d.restype = c_uint
lib.ElLSE_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElLSE_c.restype = c_uint
lib.ElLSE_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElLSE_z.restype = c_uint
lib.ElLSEDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElLSEDist_s.restype = c_uint
lib.ElLSEDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElLSEDist_d.restype = c_uint
lib.ElLSEDist_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElLSEDist_c.restype = c_uint
lib.ElLSEDist_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElLSEDist_z.restype = c_uint
def LSE(A,B,C,D):
  if type(A) is not type(B) or type(B) is not type(C) or type(C) is not type(D):
    raise Exception('Matrix types of {A,B,C,D} must match')
  if A.tag != B.tag or B.tag != C.tag or C.tag != D.tag:
    raise Exception('Datatypes of {A,B,C,D} must match')
  if type(A) is Matrix:
    X = Matrix(A.tag)
    args = [A.obj,B.obj,C.obj,D.obj,X.obj]
    if   A.tag == sTag: lib.ElLSE_s(*args)
    elif A.tag == dTag: lib.ElLSE_d(*args)
    elif A.tag == cTag: lib.ElLSE_c(*args)
    elif A.tag == zTag: lib.ElLSE_z(*args)
    else: DataExcept()
    return X
  elif type(A) is DistMatrix:
    X = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [A.obj,B.obj,C.obj,D.obj,X.obj]
    if   A.tag == sTag: lib.ElLSEDist_s(*args)
    elif A.tag == dTag: lib.ElLSEDist_d(*args)
    elif A.tag == cTag: lib.ElLSEDist_c(*args)
    elif A.tag == zTag: lib.ElLSEDist_z(*args)
    else: DataExcept()
    return X
  else: TypeExcept()

# Multishift Hessenberg solve
# ===========================
lib.ElMultiShiftHessSolve_s.argtypes = \
  [c_uint,c_uint,sType,c_void_p,c_void_p,c_void_p]
lib.ElMultiShiftHessSolve_s.restype = c_uint
lib.ElMultiShiftHessSolve_d.argtypes = \
  [c_uint,c_uint,dType,c_void_p,c_void_p,c_void_p]
lib.ElMultiShiftHessSolve_d.restype = c_uint
lib.ElMultiShiftHessSolve_c.argtypes = \
  [c_uint,c_uint,cType,c_void_p,c_void_p,c_void_p]
lib.ElMultiShiftHessSolve_c.restype = c_uint
lib.ElMultiShiftHessSolve_z.argtypes = \
  [c_uint,c_uint,zType,c_void_p,c_void_p,c_void_p]
lib.ElMultiShiftHessSolve_z.restype = c_uint
lib.ElMultiShiftHessSolveDist_s.argtypes = \
  [c_uint,c_uint,sType,c_void_p,c_void_p,c_void_p]
lib.ElMultiShiftHessSolveDist_s.restype = c_uint
lib.ElMultiShiftHessSolveDist_d.argtypes = \
  [c_uint,c_uint,dType,c_void_p,c_void_p,c_void_p]
lib.ElMultiShiftHessSolveDist_d.restype = c_uint
lib.ElMultiShiftHessSolveDist_c.argtypes = \
  [c_uint,c_uint,cType,c_void_p,c_void_p,c_void_p]
lib.ElMultiShiftHessSolveDist_c.restype = c_uint
lib.ElMultiShiftHessSolveDist_z.argtypes = \
  [c_uint,c_uint,zType,c_void_p,c_void_p,c_void_p]
lib.ElMultiShiftHessSolveDist_z.restype = c_uint
def MultiShiftHessSolve(uplo,orient,alphaPre,H,shifts,X):
  if type(H) is not type(shifts) or type(shifts) is not type(X):
    raise Exception('Matrix types of {H,shifts,X} must match')
  if H.tag != shifts.tag or shifts.tag != X.tag:
    raise Exception('Datatypes of {H,shifts,X} must match')
  alpha = TagToType(H.tag)(alphaPre)
  if type(H) is Matrix:
    X = Matrix(H.tag)
    args = [uplo,orient,alpha,H.obj,shifts.obj,X.obj]
    if   A.tag == sTag: lib.ElMultiShiftHessSolve_s(*args)
    elif A.tag == dTag: lib.ElMultiShiftHessSolve_d(*args)
    elif A.tag == cTag: lib.ElMultiShiftHessSolve_c(*args)
    elif A.tag == zTag: lib.ElMultiShiftHessSolve_z(*args)
    else: DataExcept()
    return X
  elif type(H) is DistMatrix:
    X = DistMatrix(H.tag,MC,MR,H.Grid())
    args = [uplo,orient,alpha,H.obj,shifts.obj,X.obj]
    if   A.tag == sTag: lib.ElMultiShiftHessSolveDist_s(*args)
    elif A.tag == dTag: lib.ElMultiShiftHessSolveDist_d(*args)
    elif A.tag == cTag: lib.ElMultiShiftHessSolveDist_c(*args)
    elif A.tag == zTag: lib.ElMultiShiftHessSolveDist_z(*args)
    else: DataExcept()
    return X
  else: TypeExcept()

# Ridge regression
# ================
(RIDGE_CHOLESKY,RIDGE_QR,RIDGE_SVD)=(0,1,2)
lib.ElRidge_s.argtypes = [c_void_p,c_void_p,sType,c_void_p,c_uint]
lib.ElRidge_s.restype = c_uint
lib.ElRidge_d.argtypes = [c_void_p,c_void_p,sType,c_void_p,c_uint]
lib.ElRidge_d.restype = c_uint
lib.ElRidge_c.argtypes = [c_void_p,c_void_p,sType,c_void_p,c_uint]
lib.ElRidge_c.restype = c_uint
lib.ElRidge_z.argtypes = [c_void_p,c_void_p,sType,c_void_p,c_uint]
lib.ElRidge_z.restype = c_uint
lib.ElRidgeDist_s.argtypes = [c_void_p,c_void_p,sType,c_void_p,c_uint]
lib.ElRidgeDist_s.restype = c_uint
lib.ElRidgeDist_d.argtypes = [c_void_p,c_void_p,sType,c_void_p,c_uint]
lib.ElRidgeDist_d.restype = c_uint
lib.ElRidgeDist_c.argtypes = [c_void_p,c_void_p,sType,c_void_p,c_uint]
lib.ElRidgeDist_c.restype = c_uint
lib.ElRidgeDist_z.argtypes = [c_void_p,c_void_p,sType,c_void_p,c_uint]
lib.ElRidgeDist_z.restype = c_uint
lib.ElRidgeDistSparse_s.argtypes = [c_void_p,c_void_p,sType,c_void_p]
lib.ElRidgeDistSparse_s.restype = c_uint
lib.ElRidgeDistSparse_d.argtypes = [c_void_p,c_void_p,sType,c_void_p]
lib.ElRidgeDistSparse_d.restype = c_uint
lib.ElRidgeDistSparse_c.argtypes = [c_void_p,c_void_p,sType,c_void_p]
lib.ElRidgeDistSparse_c.restype = c_uint
lib.ElRidgeDistSparse_z.argtypes = [c_void_p,c_void_p,sType,c_void_p]
lib.ElRidgeDistSparse_z.restype = c_uint
def Ridge(A,B,alpha,alg=RIDGE_CHOLESKY):
  if A.tag != B.tag:
    raise Exception('Datatypes of A and B must match')
  if type(A) is Matrix:
    if type(B) is not Matrix:
      raise Exception('Expected RHS to be a Matrix')
    X = Matrix(A.tag)
    args = [A.obj,B.obj,alpha,X.obj,alg]
    if   A.tag == sTag: lib.ElRidge_s(*args)
    elif A.tag == dTag: lib.ElRidge_d(*args)
    elif A.tag == cTag: lib.ElRidge_c(*args)
    elif A.tag == zTag: lib.ElRidge_z(*args)
    else: DataExcept()
    return X
  elif type(A) is DistMatrix:
    if type(B) is not DistMatrix:
      raise Exception('Expected RHS to be a DistMatrix')
    X = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [A.obj,B.obj,alpha,X.obj,alg]
    if   A.tag == sTag: lib.ElRidgeDist_s(*args)
    elif A.tag == dTag: lib.ElRidgeDist_d(*args)
    elif A.tag == cTag: lib.ElRidgeDist_c(*args)
    elif A.tag == zTag: lib.ElRidgeDist_z(*args)
    else: DataExcept()
    return X
  elif type(A) is DistSparseMatrix:
    if type(B) is not DistMultiVec:
      raise Exception('Expected RHS to be a DistMultiVec')
    X = DistMultiVec(A.tag,A.Comm())
    args = [A.obj,B.obj,alpha,X.obj]
    if   A.tag == sTag: lib.ElRidgeDistSparse_s(*args)
    elif A.tag == dTag: lib.ElRidgeDistSparse_d(*args)
    elif A.tag == cTag: lib.ElRidgeDistSparse_c(*args)
    elif A.tag == zTag: lib.ElRidgeDistSparse_z(*args)
    else: DataExcept()
    return X
  else: TypeExcept()

# Tikhonov regularization
# =======================
(TIKHONOV_CHOLESKY,TIKHONOV_QR)=(0,1)

lib.ElTikhonov_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElTikhonov_s.restype = c_uint
lib.ElTikhonov_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElTikhonov_d.restype = c_uint
lib.ElTikhonov_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElTikhonov_c.restype = c_uint
lib.ElTikhonov_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElTikhonov_z.restype = c_uint
lib.ElTikhonovDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElTikhonovDist_s.restype = c_uint
lib.ElTikhonovDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElTikhonovDist_d.restype = c_uint
lib.ElTikhonovDist_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElTikhonovDist_c.restype = c_uint
lib.ElTikhonovDist_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElTikhonovDist_z.restype = c_uint
lib.ElTikhonovDistSparse_s.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElTikhonovDistSparse_s.restype = c_uint
lib.ElTikhonovDistSparse_d.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElTikhonovDistSparse_d.restype = c_uint
lib.ElTikhonovDistSparse_c.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElTikhonovDistSparse_c.restype = c_uint
lib.ElTikhonovDistSparse_z.argtypes = [c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElTikhonovDistSparse_z.restype = c_uint

def Tikhonov(A,B,Gamma,alg=TIKHONOV_CHOLESKY):
  if type(A) is not type(Gamma):
    raise Exception('Matrix types of A and Gamma must match')
  if A.tag != B.tag or B.tag != Gamma.tag:
    raise Exception('Datatypes of {A,B,Gamma} must match')
  if type(A) is Matrix:
    if type(B) is not Matrix:
      raise Exception('Expected RHS to be a Matrix')
    X = Matrix(A.tag)
    args = [A.obj,B.obj,Gamma.obj,X.obj,alg]
    if   A.tag == sTag: lib.ElTikhonov_s(*args)
    elif A.tag == dTag: lib.ElTikhonov_d(*args)
    elif A.tag == cTag: lib.ElTikhonov_c(*args)
    elif A.tag == zTag: lib.ElTikhonov_z(*args)
    else: DataExcept()
    return X
  elif type(A) is DistMatrix:
    if type(B) is not DistMatrix:
      raise Exception('Expected RHS to be a DistMatrix')
    X = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [A.obj,B.obj,Gamma.obj,X.obj,alg]
    if   A.tag == sTag: lib.ElTikhonovDist_s(*args)
    elif A.tag == dTag: lib.ElTikhonovDist_d(*args)
    elif A.tag == cTag: lib.ElTikhonovDist_c(*args)
    elif A.tag == zTag: lib.ElTikhonovDist_z(*args)
    else: DataExcept()
    return X
  elif type(A) is DistSparseMatrix:
    if type(B) is not DistMultiVec:
      raise Exception('Expected RHS to be a DistMultiVec')
    X = DistMultiVec(A.tag,A.Comm())
    args = [A.obj,B.obj,Gamma.obj,X.obj]
    if   A.tag == sTag: lib.ElTikhonovDistSparse_s(*args)
    elif A.tag == dTag: lib.ElTikhonovDistSparse_d(*args)
    elif A.tag == cTag: lib.ElTikhonovDistSparse_c(*args)
    elif A.tag == zTag: lib.ElTikhonovDistSparse_z(*args)
    else: DataExcept()
    return X
  else: TypeExcept()
